objects/Account.object
<CustomObject><fields>
        <fullName>Billing_Street_1__c</fullName>
        <formula>IF(LEN(BillingStreet) = LEN(SUBSTITUTE(BillingStreet, MID($Setup.Global__c.CRLF__c,3,1),"")),
  BillingStreet,
  IF(LEN(BillingStreet) = LEN(SUBSTITUTE(BillingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    LEFT(BillingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1), BillingStreet)),
    IF(LEN(BillingStreet) = LEN(SUBSTITUTE(BillingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
      LEFT(BillingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1), BillingStreet)),
      ""
      )
    )
  )</formula>
        <label>Billing Street 1</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Billing_Street_2__c</fullName>
        <formula>IF(LEN(BillingStreet) = LEN(SUBSTITUTE(BillingStreet, MID($Setup.Global__c.CRLF__c,3,1),"")),
  "",
  IF(LEN(BillingStreet) = LEN(SUBSTITUTE(BillingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    MID(BillingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),BillingStreet)+1, LEN(BillingStreet)),
    IF(LEN(BillingStreet) = LEN(SUBSTITUTE(BillingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
      LEFT(SUBSTITUTE(BillingStreet, LEFT(BillingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),BillingStreet)), ""), FIND(MID($Setup.Global__c.CRLF__c,3,1),SUBSTITUTE(BillingStreet, LEFT(BillingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),BillingStreet)), "")))
      ,""
      )
    )
  )</formula>
        <label>Billing Street 2</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Billing_Street_3__c</fullName>
        <formula>IF(LEN(BillingStreet) = LEN(SUBSTITUTE(BillingStreet, MID($Setup.Global__c.CRLF__c,3,1),"")),
  "",
  IF(LEN(BillingStreet) = LEN(SUBSTITUTE(BillingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    "",
    IF(LEN(BillingStreet) = LEN(SUBSTITUTE(BillingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
        SUBSTITUTE(SUBSTITUTE(BillingStreet, LEFT(BillingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),BillingStreet)), ""),LEFT(SUBSTITUTE(BillingStreet, LEFT(BillingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),BillingStreet)), ""), FIND(MID($Setup.Global__c.CRLF__c,3,1),SUBSTITUTE(BillingStreet, LEFT(BillingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),BillingStreet)), ""))) ,"")
      ,""
      )
    )
  )</formula>
        <label>Billing Street 3</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Chapter_Chair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Chair</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Chapter Chair)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Chapter_Number__c</fullName>
        <inlineHelpText>{AA000}</inlineHelpText>
        <label>Chapter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>City__c</fullName>
        <description>Locations of a chapter</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country__c</fullName>
        <defaultValue>"United States"</defaultValue>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Facebook_Page__c</fullName>
        <label>Facebook Page</label>
        <type>Url</type>
    </fields><fields>
        <fullName>First_Opp_Amount_closed_won__c</fullName>
        <label>First Opp $ (closed won)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>First_Opp_Date_closed_won__c</fullName>
        <label>First Opp Date (closed won)</label>
        <type>Date</type>
    </fields><fields>
        <fullName>First_Opp_Dept__c</fullName>
        <globalPicklist>Departments</globalPicklist>
        <label>First Opp Dept</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Giving_Level__c</fullName>
        <formula>IF( OR(npo02__OppAmountThisYear__c &gt; 1000, npo02__OppAmountLastYear__c&gt;1000, npo02__TotalOppAmount__c &gt;10000), 'Major', 
IF(OR ( npo02__OppsClosedThisYear__c &gt;=6, npo02__OppsClosedLastYear__c &gt;=6),'Frequent', 
IF(npo02__NumberOfClosedOpps__c &gt;1,'Infrequent', 
IF(npo02__NumberOfClosedOpps__c =1,'One-Time' 
,'n/a'))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giving Level</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Largest_Opp_Amount_closed_won__c</fullName>
        <label>Largest Opp $ (closed won)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Last_Opp_Date_closed_won__c</fullName>
        <label>Last Opp Date (closed won)</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Last_Opp_amount_closed_won__c</fullName>
        <label>Last Opp $ (closed won)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Last_Payment_Amount_all_stages__c</fullName>
        <label>Last Payment Amount (all stages)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Last_Payment_Date_all_stages__c</fullName>
        <label>Last Payment Date (all stages)</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>npe01__One2OneContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>npe01__One2OneContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Added_By__c</fullName>
        <label>RE Added By</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Alias_1__c</fullName>
        <label>RE Alias 1</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Alias_2__c</fullName>
        <label>RE Alias 2</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Changed_By__c</fullName>
        <label>RE Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Date_Added__c</fullName>
        <label>RE Date Added</label>
        <type>Date</type>
    </fields><fields>
        <fullName>RE_Date_Changed__c</fullName>
        <label>RE Date Changed</label>
        <type>Date</type>
    </fields><fields>
        <fullName>RE_ID__c</fullName>
        <label>RE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RE Inactive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Regional Director)</relationshipLabel>
        <relationshipName>Chapters</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Salutation_Override__c</fullName>
        <label>Salutation Override</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Shipping_Street_1__c</fullName>
        <formula>IF(LEN(ShippingStreet) = LEN(SUBSTITUTE(ShippingStreet, MID($Setup.Global__c.CRLF__c,3,1),"")),
  ShippingStreet,
  IF(LEN(ShippingStreet) = LEN(SUBSTITUTE(ShippingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    LEFT(ShippingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1), ShippingStreet)),
    IF(LEN(ShippingStreet) = LEN(SUBSTITUTE(ShippingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
      LEFT(ShippingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1), ShippingStreet)),
      ""
      )
    )
  )</formula>
        <label>Shipping Street 1</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Shipping_Street_2__c</fullName>
        <formula>IF(LEN(ShippingStreet) = LEN(SUBSTITUTE(ShippingStreet, MID($Setup.Global__c.CRLF__c,3,1),"")),
  "",
  IF(LEN(ShippingStreet) = LEN(SUBSTITUTE(ShippingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    MID(ShippingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),ShippingStreet)+1, LEN(ShippingStreet)),
    IF(LEN(ShippingStreet) = LEN(SUBSTITUTE(ShippingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
      LEFT(SUBSTITUTE(ShippingStreet, LEFT(ShippingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),ShippingStreet)), ""), FIND(MID($Setup.Global__c.CRLF__c,3,1),SUBSTITUTE(ShippingStreet, LEFT(ShippingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),ShippingStreet)), "")))
      ,""
      )
    )
  )</formula>
        <label>Shipping Street 2</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Shipping_Street_3__c</fullName>
        <formula>IF(LEN(ShippingStreet) = LEN(SUBSTITUTE(ShippingStreet, MID($Setup.Global__c.CRLF__c,3,1),"")),
  "",
  IF(LEN(ShippingStreet) = LEN(SUBSTITUTE(ShippingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    "",
    IF(LEN(ShippingStreet) = LEN(SUBSTITUTE(ShippingStreet, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
        SUBSTITUTE(SUBSTITUTE(ShippingStreet, LEFT(ShippingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),ShippingStreet)), ""),LEFT(SUBSTITUTE(ShippingStreet, LEFT(ShippingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),ShippingStreet)), ""), FIND(MID($Setup.Global__c.CRLF__c,3,1),SUBSTITUTE(ShippingStreet, LEFT(ShippingStreet, FIND(MID($Setup.Global__c.CRLF__c,3,1),ShippingStreet)), ""))) ,"")
      ,""
      )
    )
  )</formula>
        <label>Shipping Street 3</label>
        <type>Text</type>
    </fields><fields>
        <fullName>State__c</fullName>
        <description>Location of a chapter</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Total_Gross_Dollar_Units__c</fullName>
        <label>Total Gross Dollar Units</label>
        <summarizedField>Opportunity.Gross_Dollar_Units__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Gross_Payment_Units__c</fullName>
        <label>Total Gross Payment Units</label>
        <summarizedField>Opportunity.Gross_Payment_Units__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Opp_Amount_all_stages__c</fullName>
        <label>Total Opp $ (all stages)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Opp_Amount_closed_won__c</fullName>
        <label>Total Opp $ (closed won)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Payment_Received_all_stages__c</fullName>
        <label>Total Payment Received (all stages)</label>
        <summarizedField>Opportunity.npe01__Payments_Made__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_of_Opps_closed_won__c</fullName>
        <label>Total # of Opps (closed won)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_of_Paid_Payments_all_stages__c</fullName>
        <label>Total # of Paid Payments (all stages)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>User_Lookup__c</fullName>
        <formula>User__c == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Lookup</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>Chapter_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Chapter_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Chapter</value>
        </filters>
        <label>All Chapter Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>Chapters</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Chapter</value>
        </filters>
        <label>Chapters</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>Household_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>npo02__Formal_Greeting__c</columns>
        <columns>npo02__Informal_Greeting__c</columns>
        <columns>npo02__TotalOppAmount__c</columns>
        <columns>npo02__AverageAmount__c</columns>
        <columns>npo02__Best_Gift_Year__c</columns>
        <columns>npo02__HouseholdPhone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HH_Account</value>
        </filters>
        <label>Household Accounts</label>
    </listViews><listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews><listViews>
        <fullName>MyOrganizations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Organizations</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>My_Account_Teams</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>My Account Teams</label>
    </listViews><listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>Organization_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>npe01__One2OneContact__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organization</value>
        </filters>
        <label>All Organization Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>Chapter</fullName>
        <active>true</active>
        <description>A group of Delta Waterfowl members.</description>
        <label>Chapter</label>
    </recordTypes><recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>An Account representing a Household containing one or more individuals</description>
        <label>Household Account</label>
    </recordTypes><recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>An Account representing an organization</description>
        <label>Organization</label>
    </recordTypes></CustomObject>